--- a/Workshop II/Projects/Final Project/NewsClassifier.ipynb
+++ b/Workshop II/Projects/Final Project/NewsClassifier.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "\n",
     "# Ethics\n",
-    "Concerning data, our dataset has been downloaded from Kaggle website, and, this data is already found on UCI Machine Learning Repository <a href=\"#references\">[1]</a>. This data is already published on public links. In addition, it does not contain information that could harm anybody. However, we could not have the chance to either verify the existence of this data on the web, or whether it has information that could be harmful. Moreover, the data only reveals the headline of an article, but it does not show its story.\n",
+    "Concerning data, our dataset has been downloaded from Kaggle website, and, this data is already found on UCI Machine Learning Repository <a href=\"#annex\">[1]</a>. This data is already published on public links. In addition, it does not contain information that could harm anybody. However, we could not have the chance to either verify the existence of this data on the web, or whether it has information that could be harmful. Moreover, the data only reveals the headline of an article, but it does not show its story.\n",
     "\n",
     "Regarding the outcome of this project, the desired output will not be subjected to negatively impact any person (or organization) in anyways. Although the headline of each story is revealed, titles do not often contain harmful information. Furthermore, this piece of work will result in building a classifier that could help predict the category of an article from only its headline.\n",
     "\n",
@@ -59,7 +59,7 @@
    },
    "outputs": [],
    "source": [
-    "# This code is to disable warnings that may display this notebook a liitle bit \"ugly\"\n",
+    "# This code is to disable warnings that may display this notebook a little bit \"ugly\"\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
    ]
@@ -630,7 +630,7 @@
    "source": [
     "**Words Representation**\n",
     "\n",
-    "The following code is show the most representative words per each <b>CATEGORY</b>. While the following code will plot the most representative words per each <b>CATEGORY</b>."
+    "The following code is to show the most representative words per each <b>CATEGORY</b>. While the following code will plot the most representative words per each <b>CATEGORY</b>."
    ]
   },
   {
@@ -1826,16 +1826,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p name=\"references\" id=\"references\" style=\"    font-size: 185.7%;margin: 1.08em 0 0 0;font-weight: bold; line-height: 1.0;\">References</p> \n",
+    "# References\n",
     "\n",
     "[1] Lichman, M. (2013). UCI Machine Learning Repository [http://archive.ics.uci.edu/ml]. Irvine, CA: University of California, School of Information and Computer Science."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Annex\n",
+    "Annex-A: <a id=\"annex\" href=\"https://github.com/saebghazal/DS-Project/blob/master/AnnexB_NewsClassifier_CNN.ipynb\">Explain decisions of the <b>ensemble_predic</b> funtion prediction result using <b>lime</b></a>\n",
+    "\n",
+    "Annex-B: <a href=\"https://github.com/am2en/news-classifier/blob/master/NewsClassifier-LIME_Version.ipynb\">Building another news article classifier using <b>word2vec</b> and <b>Convolutional Neural Network (CNN)</b> model</a>"
    ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1849,54 +1859,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
-  },
-  "widgets": {
-   "state": {
-    "1c90d99b62634abf8fce19a104423eee": {
-     "views": [
-      {
-       "cell_index": 76
-      }
-     ]
-    },
-    "555ffa48068e4e85a2385ea7a3ae38a5": {
-     "views": [
-      {
-       "cell_index": 76
-      }
-     ]
-    },
-    "bde22dda2891475c9f06f32dc88cf4cc": {
-     "views": [
-      {
-       "cell_index": 76
-      }
-     ]
-    },
-    "c0d3ada5252d4073afb0c1e464cfa2e2": {
-     "views": [
-      {
-       "cell_index": 76
-      }
-     ]
-    },
-    "c36afe15d44c4d1cb50bb01ad50cfeb1": {
-     "views": [
-      {
-       "cell_index": 76
-      }
-     ]
-    },
-    "db424f2042e345cd95b5d41fd0fe6458": {
-     "views": [
-      {
-       "cell_index": 76
-      }
-     ]
-    }
-   },
-   "version": "1.2.0"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
