--- a/MashVisor/MashV_Task.ipynb
+++ b/MashVisor/MashV_Task.ipynb
@@ -1699,7 +1699,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The above results give the likelihood according to the given criteria in this task, however, the given results could only be valid for the months: March, April, May, June and July for the given cities. In other words, these results may not be generalized for new data, and specifically, new cities or months of a year. Nonetheless, we can restructure our dataset where we can add a new column categorizing time difference between: start searching for a home and connecting with agent, in categories such as: less than 2 days, 2 days, 3 days, 4 days, and 5 & more. Then, machine learning models can be employed to help have better prediction results of the final status of lead. However, \"the more data the better\", that is, it would be more useful, if data, reprents a whole year, was utilized in this task. "
+    "The above results show the likelihood according to the given criteria in this task, however, the given results could only be valid for the months: March, April, May, June and July for the given cities. In other words, these results may not be generalized for new data, and specifically, new cities or months of a year. Nonetheless, we can restructure our dataset where we can add a new column categorizing time difference between: start searching for a home and connecting with agent, in categories such as: less than 2 days, 2 days, 3 days, 4 days, and 5 & more. Then, machine learning models can be employed to help have better prediction results of the final status of lead. However, \"the more data the better\", that is, it would be more useful, if data, reprents a whole year, was utilized in this task. "
    ]
   }
  ],
